# autotools-skeletal

./: .dir-locals.el  .gitignore  Makefile.am  configure.ac
src/: Makefile.am
